fix: Specify version ranges for numpy and cvxpy in requirements.txt

--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -5,7 +5,7 @@
 # -----------------------------------------------------------------------------
 # Core Scientific Computing
 # -----------------------------------------------------------------------------
-numpy>=1.24.0
+numpy>=1.24.0,<2.0
 scipy>=1.11.0
 pandas>=2.0.0
 
@@ -18,7 +18,7 @@ pandas>=2.0.0
 casadi>=3.6.0
 
 # CVXPY - Convex optimization modeling
-cvxpy>=1.4.0
+cvxpy>=1.4.0,<1.5
 
 # QP Solvers
 osqp>=0.6.3                    # Operator Splitting QP solver (fast, embedded-friendly)
